--- a/src/main/resources/Server/Languages/en-US/server.lang
+++ b/src/main/resources/Server/Languages/en-US/server.lang
@@ -5,12 +5,12 @@ items.Tool_Empty_Gold_Watering_Can.name = "Empty Gold Watering Can"
 items.Tool_Empty_Adamantite_Watering_Can.name = "Empty Adamantite Watering Can"
 items.Tool_Empty_Mithril_Watering_Can.name = "Empty Mithril Watering Can"
 
-items.Tool_Empty_Copper_Watering_Can.description = "Modify the description"
-items.Tool_Empty_Cobalt_Watering_Can.description = "Modify the description"
-items.Tool_Empty_Thorium_Watering_Can.description = "Modify the description"
-items.Tool_Empty_Gold_Watering_Can.description = "Modify the description"
-items.Tool_Empty_Adamantite_Watering_Can.description = "Modify the description"
-items.Tool_Empty_Mithril_Watering_Can.description = "Modify the description"
+items.Tool_Empty_Copper_Watering_Can.description = "This watering can isn't really fit for use, breaks quickly. Waters a 1x1 block area."
+items.Tool_Empty_Cobalt_Watering_Can.description = "Waters a 2x2 block area."
+items.Tool_Empty_Thorium_Watering_Can.description = "Waters a 2x2 block area."
+items.Tool_Empty_Gold_Watering_Can.description = "This watering can looks quite sturdy. Waters a 1x1 block area."
+items.Tool_Empty_Adamantite_Watering_Can.description = "Waters a 3x3 block area."
+items.Tool_Empty_Mithril_Watering_Can.description = "Waters a 4x4 block area."
 
 items.Tool_Full_Copper_Watering_Can.name = "Copper Watering Can"
 items.Tool_Full_Cobalt_Watering_Can.name = "Cobalt Watering Can"
@@ -19,9 +19,9 @@ items.Tool_Full_Gold_Watering_Can.name = "Gold Watering Can"
 items.Tool_Full_Adamantite_Watering_Can.name = "Adamantite Watering Can"
 items.Tool_Full_Mithril_Watering_Can.name = "Mithril Watering Can"
 
-items.Tool_Full_Copper_Watering_Can.description = "Modify the description"
-items.Tool_Full_Cobalt_Watering_Can.description = "Modify the description"
-items.Tool_Full_Thorium_Watering_Can.description = "Modify the description"
-items.Tool_Full_Gold_Watering_Can.description = "Modify the description"
-items.Tool_Full_Adamantite_Watering_Can.description = "Modify the description"
-items.Tool_Full_Mithril_Watering_Can.description = "Modify the description"
+items.Tool_Full_Copper_Watering_Can.description = "This watering can isn't really fit for use, breaks quickly. Waters a 1x1 block area."
+items.Tool_Full_Cobalt_Watering_Can.description = "Waters a 2x2 block area."
+items.Tool_Full_Thorium_Watering_Can.description = "Waters a 2x2 block area."
+items.Tool_Full_Gold_Watering_Can.description = "This watering can looks quite sturdy. Waters a 1x1 block area."
+items.Tool_Full_Adamantite_Watering_Can.description = "Waters a 3x3 block area."
+items.Tool_Full_Mithril_Watering_Can.description = "Waters a 4x4 block area."
