Updated Item Descriptions to add Color and modified interaction name

--- a/src/main/resources/Server/Languages/en-US/server.lang
+++ b/src/main/resources/Server/Languages/en-US/server.lang
@@ -5,10 +5,10 @@ items.Tool_Empty_Gold_Watering_Can.name = "Empty Gold Watering Can"
 items.Tool_Empty_Adamantite_Watering_Can.name = "Empty Adamantite Watering Can"
 items.Tool_Empty_Mithril_Watering_Can.name = "Empty Mithril Watering Can"
 
-items.Tool_Empty_Copper_Watering_Can.description = "Fill water to use on crops, but this breaks quickly. Waters a 1x1 block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
+items.Tool_Empty_Copper_Watering_Can.description = "Fill water to use on crops, <color is="#e72b2b">but it breaks quickly</color>. Waters a <color is="#ffffff">1x1</color> block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
 items.Tool_Empty_Cobalt_Watering_Can.description = "Fill water to use on crops. Waters a <color is="#4ade80">2x2</color> block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
 items.Tool_Empty_Thorium_Watering_Can.description = "Fill water to use on crops. Waters a <color is="#4ade80">2x2</color> block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
-items.Tool_Empty_Gold_Watering_Can.description = "Fill water to use on crops with this sturdy watering can. Waters a 1x1 block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
+items.Tool_Empty_Gold_Watering_Can.description = "Fill water to use on crops with this <color is="#4ade80">sturdy</color> tool. Waters a <color is="#ffffff">1x1</color> block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
 items.Tool_Empty_Adamantite_Watering_Can.description = "Fill water to use on crops. Waters a <color is="#4ade80">3x3</color> block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
 items.Tool_Empty_Mithril_Watering_Can.description = "Fill water to use on crops. Waters a <color is="#4ade80">4x4</color> block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
 
@@ -19,9 +19,9 @@ items.Tool_Full_Gold_Watering_Can.name = "Gold Watering Can"
 items.Tool_Full_Adamantite_Watering_Can.name = "Adamantite Watering Can"
 items.Tool_Full_Mithril_Watering_Can.name = "Mithril Watering Can"
 
-items.Tool_Full_Copper_Watering_Can.description = "Fill water to use on crops, but this breaks quickly. Waters a 1x1 block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
+items.Tool_Full_Copper_Watering_Can.description = "Fill water to use on crops, <color is="#e72b2b">but it breaks quickly</color>. Waters a <color is="#ffffff">1x1</color> block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
 items.Tool_Full_Cobalt_Watering_Can.description = "Fill water to use on crops. Waters a <color is="#4ade80">2x2</color> block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
 items.Tool_Full_Thorium_Watering_Can.description = "Fill water to use on crops. Waters a <color is="#4ade80">2x2</color> block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
-items.Tool_Full_Gold_Watering_Can.description = "Fill water to use on crops with this sturdy watering can. Waters a 1x1 block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
+items.Tool_Full_Gold_Watering_Can.description = "Fill water to use on crops with this <color is="#4ade80">sturdy</color> tool. Waters a <color is="#ffffff">1x1</color> block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
 items.Tool_Full_Adamantite_Watering_Can.description = "Fill water to use on crops. Waters a <color is="#4ade80">3x3</color> block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
 items.Tool_Full_Mithril_Watering_Can.description = "Fill water to use on crops. Waters a <color is="#4ade80">4x4</color> block area and watered crops grow <color is="#4ade80">2.5x</color> faster."
